feat: add a virtual thread runner